test/functions/jturner/fun_call_mismatch.good
fun_call_mismatch.chpl:3: error: illegal access of first class function
