test/functions/jturner/fun_call_mismatch.chpl
var f = lambda(i:int) { writeln(i); };

f();
